# bzip2

./: .gitlab-ci.yml  CMakeLists.txt  bzlib.c  bzlib.h  bzlib_private.h  compress.c  crc32.c  decompress.c  huffman.c  makefile.msc  randtable.c
bzlib_rust/: CMakeLists.txt
bzlib_rust/src/: rand_table.rs
cmake/: FindRust.cmake
docs/: manual.xml
tests/: CMakeLists.txt
